tests/transpiler/x/rs/map_in_operator.rs
// Generated by Mochi transpiler v0.10.31 on 2025-07-20 08:42 +0700
use std::collections::HashMap;
fn main() {
    let m: HashMap<i64, String> = HashMap::from([(1, "a"), (2, "b")]);
    println!("{}", (1 in m));
    println!("{}", (3 in m));
}
